# epochs

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
data/: bighorn-2020.yaml  child.cfg  epochs.cfg  epochs_extra.cfg  epochs_interp.cfg  epochs_spec.cfg  extra.cfg  kcor.epochs.spec.cfg  parent.cfg  site.cfg  spec.cfg  user.cfg
docs/: Makefile  conf.py  epochs.rst  index.rst  requirements.txt  spec.rst
epochs/: __init__.py  cli.py  configparser.py  parser.py  timeline.py
tests/: bighorn-2020.yaml  good.cfg  spec.cfg  test_configparser.py  test_epochs.py  test_parser.py
